[package]
name = "downloader"
version = "0.1.0"
edition = "2021"
description = "Standalone YouTube downloader server (yt-dlp)"

[lib]
name = "downloader"
path = "src/lib.rs"

[[bin]]
name = "downloader"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusty_ytdl = "0.7.4"
thiserror = "1.0"
log = "0.4"
once_cell = "1.19"
url = "2.5"
env_logger = "0.11"
